test/files/pos/michel4.scala
class A() {
  def f : Int = 2
}

class B() extends A() {
  override val f : Int = super.f
}
