test/files/neg/t4283b/Test.scala
object Derived extends test.ScalaBipp {
  override def f(): Int = super.f()
}
